#6 -> Semantica 2 / Correcciones